--- a/about.css
+++ b/about.css
@@ -9,7 +9,7 @@
 }
 .navbanner-container{
     width: 100%;
-    height: 100vh;
+    height: auto;
     /* background-color: rgb(45,42,99); */
 }
 /* ..............navbar.................. */
@@ -45,17 +45,18 @@
     justify-content: space-evenly;
     /* background-color: chartreuse; */
 }
-.nav-menu P{
+.nav-menu a{
     font-size: 16px;
     font-family: sans-serif;
     font-weight: 500;
     color: whitesmoke;
+    text-decoration: none;
 }
 
 /* ................banner........................... */
 .banner-container{
     width: 100%;
-    height:87vh;
+    height:60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -196,19 +197,17 @@
     align-items: center;
     justify-content: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-  
-.service-box .icon {
-    display: block;
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: #fff;
+    background-size:cover;
+    background-repeat: no-repeat;
+    filter: blur(1px);
 }
   
 .service-box p {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
+    font-size: 22px;
+    font-family: sans-serif;
+    font-weight: bolder;
+    color: whitesmoke;
+    filter: blur(0px);
 }
 
 /* .................. details.................. */
