--- a/blog.css
+++ b/blog.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing:border-box;
 }
-.productweb-container{
+.blogweb-container{
     width: 100%;
     height: auto;
 }
@@ -49,109 +49,81 @@
     text-decoration: none;
 }
 
-/* ......................BANNER.................. */
-.banner-container{
+/* ................blog.......................... */
+.blog-page-container{
     width: 100%;
     height: 100vh;
-    background-color: rgb(220, 220, 22);
-}
-.banner-title{
-    width: 100%;
-    height: 60%;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 5%;
-    background-color: blueviolet;
-    background-image: url(Access-images/form-image_11zon.png);
-    background-size: cover;
+    background-color: whitesmoke;
+    gap: 3%;
 }
-.banner-title h1{
-    font-size: 52px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    color: whitesmoke;
+.blog-card{
+    width: 350px;
+    height: 550px;
+    display: flex;
+    flex-direction: column;
+    background-color:white;
 }
-.banner-title p{
+.blog-card img{
+     width: 100%;
+     height: 35%;
+}
+.profile{
+    width: 100%;
+    height:15%;
+    display: flex;
+    align-items: center;
+    /* background-color: beige; */
+    gap: 2%;
+}
+.profile img{
+    width: 50px;
+    height: 50px;
+    margin-left: 5%;
+}
+.profile p{
+    font-size: 15px;
+    font-family: sans-serif;
+    color: gray;
+    font-weight: 200;
+}
+.content{
+    width: 100%;
+    height: 40%;
+}
+.content h3{
     font-size: 22px;
-    font-family: sans-serif;
-    font-weight: 500;
-    color: whitesmoke;
-}
-.estimate-container{
-    width: 100%;
-    height: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 15%;
-    background-color: rgb(45,42,99);
-    font-family: sans-serif;
-    color: whitesmoke;
-    font-size: 25px;
-}
-.estimate-container button{
-    width: 18%;
-    height: 20%;
-    font-size: 18px;
-    font-weight: bold;
-    background-color: white;
-    border: 2px solid white;
-    color: rgb(45,42,99);
-}
-/* .............product............................. */
-.productpage-container{
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.product-container{
-    width: 100%;
-    height: 380vh;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    /* background-color: rgb(18, 166, 211); */
-    justify-items: center;
-    align-items: center;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(Access-images/product\ bg.jpg);
-}
-.product-card{
-    width: 500px;
-    height: 500px;
-    /* background-color: rgb(35, 167, 188); */
-    border: 5px solid white;
-    /* border-radius: 25px;  */
-    overflow: hidden;
-}
-.product-card img{
-    width: 100%;
-    height: 60%;
-}
-.product-content{
-    width: 100%;
-    height: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap:8%;
-    background-color: rgb(45, 42, 99, 0.8) ;
-}
-.product-content h3{
-    font-size: 26px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-    color: whitesmoke;
+    margin-left: 8%;
 }
-.product-content p{
-    font-size: 18px;
+.content p{
+    font-size: 19px;
     font-family: sans-serif;
-    margin-left: 3%;
-    color: grey;
+    font-weight: 300;
+    margin-left: 8%;
+    margin-top: 5%;
 }
+.card-footer{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    /* background-color: aqua; */
+    gap: 20%;
+    padding-left: 8%;
+}
+.card-footer p{
+    display: flex;
+    align-items: center;
+    gap: 2%;
+}
+.card-footer img{
+    width: 20px;
+}
+
+
 /* .................footer........................... */
 
 .footer {
@@ -232,5 +204,4 @@
      color: whitesmoke;
      font-weight: bold;
      font-family: sans-serif;
-     font-size: 1rem;
- }
+     font-size: 
