--- a/contact.css
+++ b/contact.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing:border-box;
 }
-.productweb-container{
+.contactweb-container{
     width: 100%;
     height: auto;
 }
@@ -48,111 +48,126 @@
     color: whitesmoke;
     text-decoration: none;
 }
-
-/* ......................BANNER.................. */
-.banner-container{
+/* ..........contact...................... */
+.contact-title{
     width: 100%;
-    height: 100vh;
-    background-color: rgb(220, 220, 22);
-}
-.banner-title{
-    width: 100%;
-    height: 60%;
+    height: 50vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 5%;
-    background-color: blueviolet;
-    background-image: url(Access-images/form-image_11zon.png);
-    background-size: cover;
-}
-.banner-title h1{
-    font-size: 52px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    color: whitesmoke;
-}
-.banner-title p{
-    font-size: 22px;
-    font-family: sans-serif;
-    font-weight: 500;
-    color: whitesmoke;
-}
-.estimate-container{
-    width: 100%;
-    height: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 15%;
-    background-color: rgb(45,42,99);
-    font-family: sans-serif;
-    color: whitesmoke;
-    font-size: 25px;
-}
-.estimate-container button{
-    width: 18%;
-    height: 20%;
-    font-size: 18px;
-    font-weight: bold;
-    background-color: white;
-    border: 2px solid white;
+    font-size: 32px;
     color: rgb(45,42,99);
 }
-/* .............product............................. */
-.productpage-container{
+.contact-us {
     width: 100%;
-    height: auto;
+    height: 70vh;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+    background-color: #f9f9f9;
+  }
+  
+  .contact-inf {
+    width: 50%;
+    height: 100%;
+    padding-left: 5%;
+    display: flex;
+    flex-direction: column;
+    /* background-color: aqua; */
     justify-content: center;
+    gap: 8%;
 }
-.product-container{
-    width: 100%;
-    height: 380vh;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    /* background-color: rgb(18, 166, 211); */
-    justify-items: center;
-    align-items: center;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(Access-images/product\ bg.jpg);
-}
-.product-card{
-    width: 500px;
-    height: 500px;
-    /* background-color: rgb(35, 167, 188); */
-    border: 5px solid white;
-    /* border-radius: 25px;  */
-    overflow: hidden;
-}
-.product-card img{
-    width: 100%;
-    height: 60%;
-}
-.product-content{
-    width: 100%;
-    height: 40%;
+.contact-inf h3 {
+    font-size: 42px;
+    color: #222;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  .contact-inf p {
+    font-size: 20px;
+    color: #555;
+    font-family: sans-serif;
+    margin-bottom: 2%;
+  }
+  
+  .contact-ino .info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .contact-inf .info p {
+    font-size: 18px;
+    font-family: sans-serif;
+    color: rgb(45,42,99);
+  }
+  
+  .contact-inf .info img{
+     max-width: 25px;
+  }
+  
+  .contact-form {
+    width: 50%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap:8%;
-    background-color: rgb(45, 42, 99, 0.8) ;
-}
-.product-content h3{
-    font-size: 26px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-    color: whitesmoke;
-}
-.product-content p{
-    font-size: 18px;
-    font-family: sans-serif;
-    margin-left: 3%;
-    color: grey;
-}
-/* .................footer........................... */
+    /* background-color: azure; */
+
+  }
+  
+  .contact-form form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .form-group {
+    display: flex;
+    gap: 5%;
+  }
+  
+  .form-group input {
+    width: 300px;
+    height: 50px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 5%;
+    padding-left: 2%;
+  }
+  
+  textarea {
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    height: 150px;
+    margin-top: 5%;
+    padding-left: 3%;
+    padding-top: 3%;
+  }
+  
+  
+  button {
+    width: 200px;
+    height: 50px;
+    background-color: rgb(45,42,99);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 5%;
+  }
+  
+  button:hover {
+    background-color: #9d7a5d;
+  }
+
+  iframe{
+    width: 100%;
+  }
+
+  /* .................footer........................... */
 
 .footer {
     width: 100%;
