--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@
     background-size: 100vw 100vh;
     background-position: center;
     animation: bganimation 20s linear infinite;
+    background-position: inherit;
 }
 @keyframes bganimation {
     0%{
@@ -48,7 +49,9 @@
     height: 12%;
     display: flex;
     justify-content: space-between;
-    /* background-color: bisque; */
+    background-color: rgb(45,42,99);
+    position: fixed;
+    z-index: 1;
 }
 .navlogo-section{
     width: 15%;
@@ -81,9 +84,9 @@
     color: whitesmoke;
     text-decoration: none;
 }
-.nav-menu a:hover{
+/* .nav-menu a:hover{
     color:rgb(45,42,99);
-}
+} */
 
 /* .................banner............... */
 
@@ -104,6 +107,7 @@
     animation: appear  linear;
     animation-timeline: view();
     animation-range: entry 5%;
+    margin-top: 10%;
 }
 .banner-container p{
     font-size: 24px;
@@ -199,7 +203,7 @@
     gap: 3%;
     cursor: pointer;
     transition: transform 0.2s;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(Access-images/65ddfbe9b9d1dc8acf8a9fc7_ARI7d5tj8U5f6ZW9Gm2w4F5G8Hj2gfe777m9gB0wouI.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url(Access-images/facts.jpg);
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
     background-attachment: fixed;
