--- a/about.css
+++ b/about.css
@@ -16,10 +16,12 @@
 
 .navbar-container{
     width: 100%;
-    height: 100px;
+    height: 12%;
     display: flex;
     justify-content: space-between;
     background-color: rgb(45,42,99);
+    position: fixed;
+    z-index: 1;
 }
 .navlogo-section{
     width: 15%;
@@ -32,20 +34,25 @@
 .navlogo-section img{
     width: 70%;
 }
-.menu-icon{
-    width: 25px;
-    height: 25px;
+.navbar-container label {
+    display: none;
+
+}
+#checking{
     display: none;
 }
-.nav-menu{
+.navbar-container label {
+    display: none;
+}
+
+.nav-items {
     width: 70%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    /* background-color: chartreuse; */
 }
-.nav-menu a{
+.nav-items a{
     font-size: 16px;
     font-family: sans-serif;
     font-weight: 500;
@@ -402,21 +409,59 @@
         .navbar-container{
             height: 80px;
         }
-        .menu-icon{
-            display: block;
-            margin-right: 5%;
-            align-self: center;
-        }
+      
         .navlogo-section{
             width: 30%;
         }
         .navlogo-section img{
             width: 100px;
         }
-        .nav-menu{
-            display: none;
+        .nav-items {
+            display: block;
+            position: fixed;
+            top: 0;
+            right: -100%;
+            background-color: rgb(45,42,99);
+            width: 60%;
+            height: 50vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+    
         }
-
+    
+        .nav-items a {
+            line-height: 10px;
+        }
+    
+        .nav-items label {
+            position: absolute;
+            top: -1%;
+            right: 5%;
+        }
+        .nav-items label img{
+            margin-top: 50%;
+        }
+        .nav-items input {
+            display: block;
+        }
+    
+        #checking:checked~.nav-items {
+            right: 0;
+        }
+    
+    
+        .navbar-container label {
+            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+        }
+        .navbar-container label img{
+            width: 60%;
+        }
         /* banner */
         .banner-container{
              height: 50vh;
