--- a/index.css
+++ b/index.css
@@ -64,29 +64,32 @@
 .navlogo-section img{
     width: 70%;
 }
-.menu-icon{
-    width: 25px;
-    height: 25px;
+.navbar-container label {
+    display: none;
+
+}
+#checking{
     display: none;
 }
-.nav-menu{
+.navbar-container label {
+    display: none;
+}
+
+.nav-items {
     width: 70%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    /* background-color: chartreuse; */
 }
-.nav-menu a{
+.nav-items a{
     font-size: 16px;
     font-family: sans-serif;
     font-weight: 500;
     color: whitesmoke;
     text-decoration: none;
 }
-/* .nav-menu a:hover{
-    color:rgb(45,42,99);
-} */
+
 
 /* .................banner............... */
 
@@ -330,6 +333,7 @@
 .box img{
     width: 100%;
     height: 80%;
+    overflow: hidden;
 }
 .box-content{
     width: 100%;
@@ -560,7 +564,7 @@
  
  
  .footer-section ul li a {
-     color:rgb(45,42,99);
+     color:grey;
      text-decoration: none;
      transition: color 0.3s;
      font-size: 1rem;
@@ -628,7 +632,6 @@
         font-size: 17px;
     }
     
-     
  
     /* project */
     
@@ -666,7 +669,52 @@
     @media (max-width:768px){
     
       /* nav */
-    
+      .nav-items {
+        display: block;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        background-color: rgb(45,42,99);
+        width: 60%;
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+
+    }
+
+    .nav-items a {
+        line-height: 10px;
+    }
+
+    .nav-items label {
+        position: absolute;
+        top: -1%;
+        right: 5%;
+    }
+    .nav-items label img{
+        margin-top: 50%;
+    }
+    .nav-items input {
+        display: block;
+    }
+
+    #checking:checked~.nav-items {
+        right: 0;
+    }
+
+
+    .navbar-container label {
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    .navbar-container label img{
+        width: 60%;
+    }
  
     /* banner */
     
@@ -815,30 +863,19 @@
     }
     /* product */
     .productpage-container{
-        height: 590vh;
+        height: auto;
+        
     }
-    .product-title{
-        font-size: 28px;
-    }
-    .section{
-        width: 100%;
-        height: 190vh;
+    .row {
+        flex-direction: column;
+        align-items: center;
     }
     .section-title{
         font-size: 22px;
     }
-    .product-grid {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-    .product-card{
-        width: 80%;
-        height: 80%;
-    }
-    .belgotex-card{
-        width: 80%;
-        height: 45%;
+    .box {
+        margin-top: 5%;
+        margin-bottom: 5%;
     }
     /* why */
     .whypage-container{
@@ -850,7 +887,6 @@
         height: 80%;
         display: grid;
         grid-template-columns: repeat(1,1fr);
-        padding-left: 5%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -919,10 +955,9 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-evenly;
-        font-size: 16px;
         padding-top: 5%;
         padding-left: 5%;
-        font-size: 15px;
+        font-size: 14px;
     }
     
     .estimate-container button{
