--- a/about.css
+++ b/about.css
@@ -350,7 +350,7 @@
  
  
  .footer-section ul li a {
-     color:rgb(45,42,99);
+     color:grey;
      text-decoration: none;
      transition: color 0.3s;
      font-size: 1rem;
@@ -465,6 +465,7 @@
         /* banner */
         .banner-container{
              height: 50vh;
+             font-size: 32px;
         }
 
         /* about */
@@ -580,6 +581,44 @@
         .about-container{
             height: 160vh;
         }
+}
+
+
+
+
+@media (max-width:321px){
+
+      /* about */
+      .about-content p{
+        font-size: 15px;
+    }
+    .about-container{
+        height: 130vh;
+    } 
+
+    /* service */
+    .services{
+        height: 190vh;
+    }
+    .service-title{
+        height: 120px;
+    }
+    .service-title h5{
+        font-size: 16px;
+    }
+    .service-title h2{
+        font-size: 26px;
+    }
+    .service-box {
+        width: 300px;
+        height: 300px;
+    }
+
+    /* footer */
+    
+    .footer-bottom{
+        font-size: 10px;
+    }
 }
  
 
