--- a/product.css
+++ b/product.css
@@ -197,7 +197,7 @@
  
  
  .footer-section ul li a {
-     color:rgb(45,42,99);
+     color:grey;
      text-decoration: none;
      transition: color 0.3s;
      font-size: 1rem;
@@ -362,4 +362,34 @@
         margin-bottom: 5%;
         padding-top: 5%;
     }           
+ }
+
+
+
+
+
+ @media (max-width:376px){
+    .product-card{
+        width: 350px;
+        height: 350px;
+    }
+    .product-content p{
+        font-size: 12px;
+    }
+
+ }
+
+
+
+
+
+
+ @media (max-width:321px){
+    .product-card{
+        width: 300px;
+        height: 300px;
+    }
+    .product-content p{
+        font-size: 10px;
+    }
  }
