--- a/about.css
+++ b/about.css
@@ -11,6 +11,7 @@
     width: 100%;
     height: auto;
     /* background-color: rgb(45,42,99); */
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(Access-images/AFT-TECH\ FS1000[1].jpg);
 }
 /* ..............navbar.................. */
 
