--- a/contact.css
+++ b/contact.css
@@ -7,7 +7,14 @@
     width: 100%;
     height: auto;
 }
-
+.navbanner-container{
+  width: 100%;
+  height: auto;
+  /* background-color: rgb(45,42,99); */
+  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(Access-images/AFT-TECH\ FS1000[1].jpg);
+  background-size: cover;
+  background-position: center;
+}
 /* ..............navbar.................. */
 
 
@@ -65,9 +72,7 @@
     justify-content: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 32px;
-    color:white;
-    background-image: url(Access-images/AFT-TECH\ FS1000[1].jpg);
-    background-size: cover;
+    color:whitesmoke;
 }
 .contact-us {
     width: 100%;
@@ -89,7 +94,7 @@
 }
 .contact-inf h3 {
     font-size: 42px;
-    color: #222;
+    color: rgb(45,42,99);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
