--- a/index.css
+++ b/index.css
@@ -20,26 +20,26 @@
 }
 .nav-banner-container{
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     background-color: rgb(64, 67, 66);
     background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-    background-position: center;
+    background-size: 100vw 120vh;
+    /* background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(Access-images/AFT-TECH\ FS1000[1].jpg); */
+    background-position: end;
     animation: bganimation 20s linear infinite;
-    background-position: inherit;
 }
 @keyframes bganimation {
     0%{
-        background-image: url(Access-images/banner\ bg_11zon.jpg);
+        background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(Access-images/AFT-TECH\ FS1000[1].jpg);
     }
     40%{
-        background-image: url(Access-images/Belgotex-Colour-Rib-Lifestyle.jpg);
+        background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(Access-images/Belgotex-Colour-Rib-Lifestyle.jpg);
     }
     80%{
-        background-image: url(Access-images/form-image_11zon.png);
+        background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(Access-images/gallery-7.jpeg);
     }
     100%{
-        background-image: url(Access-images/banner\ bg_11zon.jpg); 
+        background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(Access-images/AFT-TECH\ FS1000[1].jpg);
     }
 }
 /* ..............navbar.................. */
@@ -49,9 +49,7 @@
     height: 12%;
     display: flex;
     justify-content: space-between;
-    background-color: rgb(45,42,99);
-    position: fixed;
-    z-index: 1;
+    /* background-color: rgb(45,42,99); */
 }
 .navlogo-section{
     width: 15%;
@@ -104,33 +102,10 @@
     /* background-color: burlywood; */
 }
 .banner-container h1{
-    font-size: 48px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bolder;
-    color: white;
-    font-family:cursive;
-    animation: appear  linear;
-    animation-timeline: view();
-    animation-range: entry 5%;
-    margin-top: 10%;
-}
-.banner-container p{
-    font-size: 24px;
-    font-weight: 500;
-    color: white;
-    margin-top: 2%;
-    letter-spacing: 1px;
-    font-family: cursive;
-}
-.banner-container button{
-    width: 220px;
-    height: 50px;
-    font-size: larger;
-    margin-top: 2%;
-    border-radius: 5px;
-    color: white;
-    border: none;
-    background-color:rgb(45,42,99);
-    font-family:Arial, Helvetica, sans-serif;
+    font-size: 52px;
+    color: whitesmoke;
 }
 
 /* ................about............................ */
@@ -156,13 +131,13 @@
      animation-range: entry 5%;
  }
  .about-content h2{
-     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     font-family:  sans-serif;
      font-size: 40px;
  
  }
  .about-content p{
      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 22px;
+     font-size: 24px;
      font-weight: 400;
 
  }
@@ -203,7 +178,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: whitesmoke;
+    background-color: rgb(107,107,107);
     gap: 3%;
     cursor: pointer;
     transition: transform 0.2s;
@@ -284,8 +259,8 @@
     display: flex;
     align-items: center;
     padding-left: 5%;
-    font-size: 32px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    font-family:  sans-serif;
     background-color:rgb(45,42,99);
     color: white;
 }
@@ -322,8 +297,8 @@
 .box {
     width: 400px;
     height: 350px;
-    background-color: #e0e0e0;
-    border: 5px solid #aaa;
+    background-color: rgb(45,42,99);
+    border: 5px solid rgb(45,42,99);
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -342,6 +317,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    color: whitesmoke;
 }
 /* ................why.......................... */
 .whypage-container{
@@ -404,7 +380,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color:rgb(45,42,99) */
+    background-color:whitesmoke;
 }
 .projectpage-container .title{
     width: 100%;
@@ -412,7 +388,7 @@
     display: flex;
     align-items: center;
     padding-left: 4%;
-    font-size: 32px;
+    font-size: 30px;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: rgb(45,42,99);
@@ -436,6 +412,7 @@
     background-size:cover;
     background-repeat: no-repeat;
     filter: blur(2px);
+    background-position: inherit;
     animation: appear  linear;
     animation-timeline: view();
     animation-range: entry 5%;
@@ -449,6 +426,7 @@
 .project-box:hover .projectbox-info{
     border: 2px solid white;
     justify-content: center;
+    opacity: 1;
 }
 .projectbox-info{
     width: 95%;
@@ -457,7 +435,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: end;
-   
+    opacity: 0;
     font-family: sans-serif;
     color: white;
     gap: 2%;
@@ -481,7 +459,7 @@
     align-items: center;
     justify-content: center;
     gap: 10%;
-    background-color: whitesmoke;
+    background-color: whitesmoke);
 }
 .suppliers-container h2{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -779,7 +757,7 @@
     
     @media (max-width:426px){
     .nav-banner-container{
-        height: 70vh;
+        height: 60vh;
     }
     /* nav */
     .menu-icon{
@@ -805,7 +783,7 @@
     }
     .banner-container h1{
         font-size: 24px;
-        margin-top: 40%;
+        margin-bottom: 20%;
     }
     .banner-container button{
         width: 100px;
@@ -822,6 +800,10 @@
     .about-content{
       width: 100%;
       margin-top: 5%;
+    }
+    .about-content p{
+        font-size: 20px;
+        line-height: 22px;
     }
     .about-imagesection{
         width: 100%;
@@ -866,14 +848,21 @@
         height: auto;
         
     }
+    .product-title{
+        font-size: 22px;
+        align-items: center;
+        justify-content: center;
+        padding: 0%;
+    }
     .row {
         flex-direction: column;
         align-items: center;
     }
     .section-title{
-        font-size: 22px;
+        font-size: 18px;
     }
     .box {
+        width: 90%;
         margin-top: 5%;
         margin-bottom: 5%;
     }
@@ -913,8 +902,10 @@
         height: auto;
     }
     .projectpage-container .title{
-        font-size: 24px;
-        margin-top: 2%;
+        height: 100px;
+        font-size: 18px;
+        justify-content: center;
+        padding: 0%;
     }
     .Projectbox-container{
         height: 90%;
@@ -938,6 +929,9 @@
         width:45%;
         margin-top: 5%;
         
+    }
+    .projectbox-info h3{
+        font-size: 18px;
     }
 
     /* suppliers */
@@ -999,6 +993,7 @@
     /* banner */
     .banner-container h1{
         font-size: 22px;
+        margin-bottom: 40%;
     }
 
     /* about */
@@ -1021,7 +1016,7 @@
     }
     /* product */
     .box{
-        width: 350px;
+        width: 90%;
         height: 300px;
     }
     .section-title{
@@ -1051,6 +1046,9 @@
     .whycard h3{
        font-size: 18px;
     }
+    .estimate-container h2{
+        font-size: 16px;
+    }
     }
     
     /* .........mobile-S................. */
@@ -1061,6 +1059,7 @@
     /* banner */
     .banner-container h1{
       font-size: 18px;
+      margin-bottom: 40%;
     }
     .banner-container button{
         width: 100px;
@@ -1076,14 +1075,14 @@
         font-size: 30px;
     }
     .about-content p{
-        font-size:11px ;
+        font-size:15px ;
     }
     .about-content button{
         width: 100px;
         height: 30px;
     }
     .box{
-        width: 280px;
+        width: 90%;
     }
            /* why */
         .whypage-container{
@@ -1106,8 +1105,11 @@
     
     .estimate-container h2{
         font-size: 16px;
-    
     }
+    .projectbox-info h3{
+        font-size: 15px;
+    }
+    
     /* footer */
     
     .footer-bottom {
@@ -1115,4 +1117,31 @@
         
     }
     
+    }
+
+
+    @media(hover : hover){
+        .project-box:hover{
+            filter: blur(0px);
+            transition: filter 0.3s ease;
+            background-size: cover;
+         }
+         .project-box:hover .projectbox-info{
+             border: 2px solid white;
+             justify-content: center;
+         }   
+    }
+
+    @media(hover : none){
+        .project-box:hover{
+            filter: blur(0px);
+            transition: filter 0.3s ease;
+            background-size: cover;
+         }
+         .project-box:hover .projectbox-info{
+             border: 2px solid white;
+             justify-content: center;
+         }  
+    
+
     }
