--- a/index.css
+++ b/index.css
@@ -652,15 +652,14 @@
         position: fixed;
         top: 0;
         right: -100%;
-        background-color: rgb(45,42,99);
-        width: 60%;
-        height: 50vh;
+        /* background-color: rgb(45,42,99); */
+        width: 70%;
+        height: 80vh;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
-
-    }
+      }
 
     .nav-items a {
         line-height: 10px;
