--- a/index.css
+++ b/index.css
@@ -652,7 +652,7 @@
         position: fixed;
         top: 0;
         right: -100%;
-        /* background-color: rgb(45,42,99); */
+        background-color: rgb(45,42,99);
         width: 70%;
         height: 80vh;
         display: flex;
