--- a/index.css
+++ b/index.css
@@ -361,6 +361,9 @@
     border: 2px solid rgb(45,42,99);
     background-color: whitesmoke;
     border-radius: 5px;
+    animation: appear  linear;
+    animation-timeline: view();
+    animation-range: entry 5%;
 }
 .whycard img{
     width: 60%;
@@ -936,15 +939,21 @@
     /* suppliers */
     .suppliers-container{
         height: 50vh;
+        justify-content: flex-start;
     }
     .suppliers-container h2{
         font-size: 32px;
+        margin-top: 10%;
+    }
+    .suppliers-container img{
+        width: 40%;
+        margin-top: 5%;
     }
 
     /* estimate */
     
     .estimate-container{
-        height: 50vh;
+        height:40vh;
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-evenly;
@@ -955,10 +964,12 @@
     
     .estimate-container button{
         width: 50%;
+        height: 50px;
         padding: 2%;
         font-size: 12px;
-        margin-top: 5%;
-        margin-bottom: 10%;
+        border-radius: 5px;
+        /* margin-top: 5%; */
+        /* margin-bottom: 10%; */
         margin-left: 5%;
     }
     
